secsi, grapevine i18n, reuse node bundles use JSpinner to set node address

--- a/java/src/jmri/jmrix/JmrixBundle_da.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_da.properties
@@ -1,4 +1,5 @@
 # JmrixBundle_da.properties
+#
 # Danish translation by Sonny Hansen
 # Danish properties for the jmri.jmrix classes
 
@@ -215,7 +216,7 @@ TooltipClearCounters    = Clear the sent and received packet counters
 SentTitle               = Sent
 ReceivedTitle           = Received
 
-# cmri/rps/maple/grapevine shared items
+# cmri/rps/maple/grapevine/acela shared items
 LabelPoll               = Poll
 PollToolTip             = Send poll request
 NodePanelName           = Node
@@ -228,11 +229,35 @@ ShowOutputTip           = Select this button to show output bit assignments
 HeadingBit              = Bit
 InputBitsAnd            = input bits and
 OutputBits              = output bits
+
+LabelNodeAddress        = Node Address:
 ButtonAdd               = Add Node
 ButtonEdit              = Edit Node
 ButtonDelete            = Delete Node
 ButtonInit              = Init Node
 ButtonUpdate            = Update Node
+ReminderNode1           = Remember to save your new Node Configuration information to disk.
+Reminder2               = Use the Save button in the Preferences window.
+
+ConfirmDeleteTitle      = Confirm Deletion
+ConfirmDelete1          = Are you sure you want to delete this Node?
+ConfirmDelete2          = Any Sensors, Turnouts, or Lights with this node address will be affected.
+ConfirmUpdateTitle      = Confirm Update
+ConfirmUpdate2          = Sensor, Turnout, and Light addresses may be affected.
+ConfirmUpdate3          = Are you sure you want to update this Node?
+
+# Node edit feedback
+# The longest of the next three lines determines the window width.
+NotesStd1               = To Add a new node, enter information and select 'Add Node'.
+NotesStd2               = To Edit a node, enter node address, then select 'Edit Node'.
+NotesStd3               = To Delete a node, enter node address, then select 'Delete Node'.
+# These three lines must be shorter than the longest line above.
+NotesEdit1              = Please check Node Address before making changes.
+NotesEdit2              = To change this node, make changes, then select 'Update Node'.
+NotesEdit3              = To leave Edit without changing this node, select 'Cancel'.
+# All Errorxx lines below must be shorter than the longest NotesStdx line above. Can override in package nodeconfig Bundle
+Error1                  = Error - Node with address '{}' already exists, please try again.
+Error3                  = Error when creating new node. Node not added.
 
 # Lenz XpressNet/Roco Z21 shared config items
 GetSystemInfoButtonLabel = Get System Information
