--- a/java/src/jmri/jmrix/cmri/serial/nodeconfig/NodeConfigBundle_de.properties
+++ b/java/src/jmri/jmrix/cmri/serial/nodeconfig/NodeConfigBundle_de.properties
@@ -99,5 +99,5 @@ ConfirmUpdate2  = Detektoren, Weichen oder Signale mit dieser Kontenadresse k\u0
 ConfirmUpdate3  = Knoten wirklich aktualisieren?
 ConfirmUpdateTitle = Aktualisierung best\u00e4tigen
 
-Reminder1       = Speichern der neuen C/MRI Knoteninformation nicht vergessen.
+ReminderNode1   = Speichern der neuen C/MRI Knoteninformation nicht vergessen.
 Reminder2       = [{0}]-knopf im Fenster Voreinstellungen benutzen.
