--- a/java/src/jmri/jmrix/cmri/serial/nodeconfig/NodeConfigBundle_it.properties
+++ b/java/src/jmri/jmrix/cmri/serial/nodeconfig/NodeConfigBundle_it.properties
@@ -99,5 +99,5 @@ ConfirmUpdate2      = Saranno interessati gli indirizzi di Sensori, Scambi e Luc
 ConfirmUpdate3      = Se sicuro di voler aggiornare questo Nodo?
 ConfirmUpdateTitle  = Confermare l'operazione
 
-Reminder1           = Ricorda di salvare le nuove informazioni del nodo C/MRI su disco.
+ReminderNode1       = Ricorda di salvare le nuove informazioni del nodo C/MRI su disco.
 Reminder2           = Usare il pulsante [{0}] nella finestra Preferenze.
