--- a/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle_ja_JP.properties
+++ b/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle_ja_JP.properties
@@ -8,7 +8,6 @@ WindowTitle    = \u30ce\u30fc\u30c9\u8a2d\u5b9a
 BoxLabelNotes  = \u30ce\u30fc\u30c8
 
 LabelCardSize       = \u30ab\u30fc\u30c9\u30b5\u30a4\u30ba:
-LabelNodeAddress    = \u30ce\u30fc\u30c9\u30a2\u30c9\u30ec\u30b9:
 LabelNodeType       = \u30ce\u30fc\u30c9\u30bf\u30a4\u30d7:
 
 TipNodeAddress      = Enter node address, numbering from 1.
@@ -22,32 +21,10 @@ TipUpdateButton     = Change node information
 TipCancelButton     = Stop edit without changing node
 
 # The longest of the next three lines determines the window width.
-NotesStd1   = To Add a new node, enter information and select 'Add Node'.
-NotesStd2   = To Edit a node, enter node address, then select 'Edit Node'.
-NotesStd3   = To Delete a node, enter node address, then select 'Delete Node'.
-# These three lines must be shorter than the longest line above.
-NotesEdit1  = Please check Node Address before making changes.
-NotesEdit2  = To change this node, make changes, then select 'Update Node'.
-NotesEdit3  = \u30ce\u30fc\u30c9\u3092\u5909\u66f4\u305b\u305a\u306b\u7de8\u96c6\u3092\u7d42\u4e86\u3059\u308b\u306b\u306f\u3001'\u30ad\u30e3\u30f3\u30bb\u30eb'\u3092\u9078\u3093\u3067\u4e0b\u3055\u3044\u3002
-
+#NotesStd3   = To Delete a node, enter node address, then select 'Delete Node'.
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
-Error1    = \u30a8\u30e9\u30fc - Node with address '
-Error2    = ' already exists, please try again.
-Error3    = Error when creating new node. Node not added.
 Error4    = Error - No node with entered Node Address(UA), please try again.
-Error5    = Error - Bad character in Node Address (UA), please try again.
-Error6    = \u30a8\u30e9\u30fc - Node Address is not between 0 and 255.
 
 FeedBackAdd     = Node added. Node Address =
 FeedBackDelete  = Node deleted. Node Address =
 FeedBackUpdate  = Node updated. Node Address =
-
-ConfirmDelete1  = Are you sure you want to delete this node?
-ConfirmDelete2  = Any Sensors, Turnouts, or Lights with this node address will be affected.
-ConfirmDeleteTitle = \u524a\u9664\u78ba\u8a8d
-ConfirmUpdate2  = Sensor, Turnout, and Light addresses may be affected.
-ConfirmUpdate3  = Are you sure you want to update this node?
-ConfirmUpdateTitle  = \u66f4\u65b0\u78ba\u8a8d
-
-Reminder1  = Remember to save your new node information.
-Reminder2  = Use the Save button in the Preferences window.
