--- a/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_de.properties
+++ b/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_de.properties
@@ -75,5 +75,5 @@ ConfirmDeleteTitle = L\u00f6schen best\u00e4tigen
 ConfirmUpdate3 = Knoten wirklich aktualisieren?
 ConfirmUpdateTitle = Aktualisierung best\u00e4tigen
 
-Reminder1 = Speichern der neuen Maple Knoteninformation nicht vergessen.
+ReminderNode1 = Speichern der neuen Maple Knoteninformation nicht vergessen.
 Reminder2 = Speicherknopf im Fenster Voreinstellungen benutzen.
