--- a/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_es.properties
+++ b/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_es.properties
@@ -103,5 +103,5 @@ ConfirmUpdate2  = Puede afectar a direcciones de sensores, desv\u00ccos y luces.
 ConfirmUpdate3  = \u00f8Seguro que quiere actualizar este nodo?
 ConfirmUpdateTitle  = Confirmar actualizaci\u00f3n
 
-Reminder1  = Recuerde guardar la nueva informaci\u00f3n de nodos Maple al disco.
+ReminderNode1  = Recuerde guardar la nueva informaci\u00f3n de nodos Maple al disco.
 Reminder2  = Utilice el bot\u00dbn de guardar de la ventana de preferencias.
