--- a/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_ja_JP.properties
+++ b/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_ja_JP.properties
@@ -4,35 +4,35 @@
 #
 # Japanese properties for the jmri.jmrix.maple.nodeconfig window
 # Translated by Sakae Akanuma
-WindowTitle    = Maple\u30CE\u30FC\u30C9\u8A2D\u5B9A
+WindowTitle    = Maple\u30ce\u30fc\u30c9\u8a2d\u5b9a
 
-BoxLabelNotes  = \u30CE\u30FC\u30C8
+BoxLabelNotes  = \u30ce\u30fc\u30c8
 
-LabelCardSize       = \u30AB\u30FC\u30C9\u30B5\u30A4\u30BA:
-LabelNodeAddress    = \u30CE\u30FC\u30C9\u30A2\u30C9\u30EC\u30B9(UA) :
-LabelNodeType       = \u30CE\u30FC\u30C9\u30BF\u30A4\u30D7:
-LabelDelay          = \u53D7\u4FE1\u9045\u5EF6 (DL) :
-LabelPulseWidth     = \u30D1\u30EB\u30B9\u5E45:
-LabelMilliseconds   = (\u30DF\u30EA\u79D2)
+LabelCardSize       = \u30ab\u30fc\u30c9\u30b5\u30a4\u30ba:
+LabelNodeAddress    = \u30ce\u30fc\u30c9\u30a2\u30c9\u30ec\u30b9(UA) :
+LabelNodeType       = \u30ce\u30fc\u30c9\u30bf\u30a4\u30d7:
+LabelDelay          = \u53d7\u4fe1\u9045\u5ef6 (DL) :
+LabelPulseWidth     = \u30d1\u30eb\u30b9\u5e45:
+LabelMilliseconds   = (\u30df\u30ea\u79d2)
 
-TipNodeAddress      = \uFF10\u304B\u3089\u59CB\u307E\u308B\u30CE\u30FC\u30C9\u30A2\u30C9\u30EC\u30B9\u3092\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
-TipNodeType         = C/MRI\u30CE\u30FC\u30C9\u306E\u5F62\u5F0F\u3092\u9078\u629E\u3057\u3066\u4E0B\u3055\u3044\u3002
-TipDelay            = \u30D0\u30A4\u30C8\u53D7\u4FE1\u6BCE\u306E\u9045\u5EF6\u6642\u9593(10\u30DE\u30A4\u30AF\u30ED\u79D2\u5358\u4F4D), \u901A\u5E38\u306F\uFF10\u3002
-TipPulseWidth       = \u8EE2\u8F4D\u6A5F\u5236\u5FA1\u30D1\u30EB\u30B9\u5E45(100\u304B\u308910000\u306E\u9593\u3067\u9078\u629E)\u3002
-TipCardSize         = \u30AB\u30FC\u30C9\u6BCE\u306E\u30D3\u30C3\u30C8\u6570\u3092\u9078\u629E\u3057\u3066\u4E0B\u3055\u3044\u3002
-TipAddButton        = \u65B0\u898F\u30CE\u30FC\u30C9\u8FFD\u52A0
-TipEditButton       = \u65E2\u5B58\u30CE\u30FC\u30C9\u306E\u7DE8\u96C6
-TipDeleteButton     = \u65E2\u5B58\u30CE\u30FC\u30C9\u306E\u524A\u9664
-TipDoneButton       = \u30CE\u30FC\u30C9\u306E\u8A2D\u5B9A\u304C\u7D42\u4E86\u3057\u3066\u304B\u3089\u9078\u629E\u3057\u3066\u4E0B\u3055\u3044
-TipUpdateButton     = \u30CE\u30FC\u30C9\u60C5\u5831\u5909\u66F4
-TipCancelButton     = \u30CE\u30FC\u30C9\u3092\u5909\u66F4\u305B\u305A\u7DE8\u96C6\u3092\u7D42\u4E86\u3059\u308B\u3002
+TipNodeAddress      = \uff10\u304b\u3089\u59cb\u307e\u308b\u30ce\u30fc\u30c9\u30a2\u30c9\u30ec\u30b9\u3092\u5165\u529b\u3057\u3066\u4e0b\u3055\u3044\u3002
+TipNodeType         = C/MRI\u30ce\u30fc\u30c9\u306e\u5f62\u5f0f\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002
+TipDelay            = \u30d0\u30a4\u30c8\u53d7\u4fe1\u6bce\u306e\u9045\u5ef6\u6642\u9593(10\u30de\u30a4\u30af\u30ed\u79d2\u5358\u4f4d), \u901a\u5e38\u306f\uff10\u3002
+TipPulseWidth       = \u8ee2\u8f4d\u6a5f\u5236\u5fa1\u30d1\u30eb\u30b9\u5e45(100\u304b\u308910000\u306e\u9593\u3067\u9078\u629e)\u3002
+TipCardSize         = \u30ab\u30fc\u30c9\u6bce\u306e\u30d3\u30c3\u30c8\u6570\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002
+TipAddButton        = \u65b0\u898f\u30ce\u30fc\u30c9\u8ffd\u52a0
+TipEditButton       = \u65e2\u5b58\u30ce\u30fc\u30c9\u306e\u7de8\u96c6
+TipDeleteButton     = \u65e2\u5b58\u30ce\u30fc\u30c9\u306e\u524a\u9664
+TipDoneButton       = \u30ce\u30fc\u30c9\u306e\u8a2d\u5b9a\u304c\u7d42\u4e86\u3057\u3066\u304b\u3089\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044
+TipUpdateButton     = \u30ce\u30fc\u30c9\u60c5\u5831\u5909\u66f4
+TipCancelButton     = \u30ce\u30fc\u30c9\u3092\u5909\u66f4\u305b\u305a\u7de8\u96c6\u3092\u7d42\u4e86\u3059\u308b\u3002
 
-ButtonAdd           = \u30CE\u30FC\u30C9\u8FFD\u52A0
-ButtonEdit          = \u30CE\u30FC\u30C9\u7DE8\u96C6
-ButtonDelete        = \u30CE\u30FC\u30C9\u524A\u9664
-ButtonDone          = \u5B8C\u4E86
-ButtonUpdate        = \u30CE\u30FC\u30C9\u66F4\u65B0
-ButtonCancel        = \u53D6\u308A\u6D88\u3057
+ButtonAdd           = \u30ce\u30fc\u30c9\u8ffd\u52a0
+ButtonEdit          = \u30ce\u30fc\u30c9\u7de8\u96c6
+ButtonDelete        = \u30ce\u30fc\u30c9\u524a\u9664
+ButtonDone          = \u5b8c\u4e86
+ButtonUpdate        = \u30ce\u30fc\u30c9\u66f4\u65b0
+ButtonCancel        = \u53d6\u308a\u6d88\u3057
 
 # The longest of the next three lines determines the window width.
 NotesStd1   = To Add a new node, enter information and select 'Add Node'.
@@ -103,6 +103,5 @@ ConfirmUpdate2  = Sensor, Turnout, and Light addresses may be affected.
 ConfirmUpdate3  = Are you sure you want to update this node?
 ConfirmUpdateTitle  = Confirm Update
 
-Reminder1  = Remember to save your new node information to disk.
+ReminderNode1  = Remember to save your new node information to disk.
 Reminder2  = Use the Save button in the Preferences window.
-ReminderTitle = Reminder
