--- a/java/src/jmri/jmrix/JmrixBundle_de.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_de.properties
@@ -192,7 +192,8 @@ SendXCommandTitle       = Sende {0}-Befehl
 EnterASCIIToolTip       = Befehl eingeben als ASCII Buchstaben (hex noch nicht unterst\u00fctzt)
 Timeout                 = Zeitfehler
 
-# cmri/rps/maple/acela/grapevine shared items
+# cmri/rps/maple/secsi/acela/grapevine shared items
+MenuItemConfigNodes     = Konfiguriere Knoten
 ConfigNodesTitle        = Knotenkonfigurator
 LabelPoll               = Abfragen
 PollToolTip             = Sende Abfrageversuch
@@ -207,11 +208,34 @@ HeadingBit              = Bit
 InputBitsAnd            = Eingangsbits und
 OutputBits              = Ausgangsbits
 
+LabelNodeAddress        = Knotenadresse:
 ButtonAdd               = Knoten hinzuf\u00fcgen
 ButtonEdit              = Knoten bearbeiten
 ButtonDelete            = Knoten l\u00f6schen
 ButtonInit              = Knoten initialisieren
 ButtonUpdate            = Knoten aktualisieren
+ReminderNode1           = Speichern der neuen Knoteninformation nicht vergessen.
+Reminder2               = Speicherknopf im Fenster Voreinstellungen benutzen.
+
+ConfirmDelete1          = Knoten wirklich l\u00f6schen?
+ConfirmDelete2          = Alle Detektoren, Weichen oder Signale mit dieser Kontenadresse sind betroffen.
+ConfirmDeleteTitle      = L\u00f6schen best\u00e4tigen
+ConfirmUpdate2          = Detektoren, Weichen oder Signale mit dieser Kontenadresse k\u00f6nnen betroffen sein.
+ConfirmUpdate3          = Knoten wirklich aktualisieren?
+ConfirmUpdateTitle      = Aktualisierung best\u00e4tigen
+
+# Node edit feedback
+# The longest of the next three lines determines the window width.
+NotesStd1   = Zur Erzeugung eines Knotens Parameter eingeben und 'Erg\u00e4nze neuen Knoten' klicken.
+NotesStd2   = Zur Bearbeitung eines bestehenden Knotens seine Adresse eingeben und 'Knoten bearbeiten' klicken.
+NotesStd3   = Zum L\u00f6schen eines Knotens seine Adresse eingeben und 'Knoten l\u00f6schen' klicken.
+# These three lines must be shorter than the longest line above.
+NotesEdit1  = Bitte Knotenadresse vor bearbeiten \u00fcberpr\u00fcfen.
+NotesEdit2  = Um diesen Knoten zu \u00e4ndern, Parameter \u00e4ndern und 'Knoten bearbeiten' klicken.
+NotesEdit3  = Um ohne Speichern Bearbeitung zu verlassen 'Abbrechen' klicken.
+# All Errorxx lines below must be shorter than the longest NotesStdx line above.
+Error1    = Fehler - Knoten auf Adresse '{}' existiert bereits, bitte \u00e4ndern.
+Error3    = Fehler beim Erzeugen des Knotens. Knoten nicht erzeugt.
 
 ConnectionPrefixDialog  = Verbindungsvorlauf {0} wirdt schon genutzt
 ConnectionNameDialog    = Verbindungsname {0} wirdt schon genutzt
