--- a/java/src/jmri/jmrix/JmrixBundle_fr.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_fr.properties
@@ -62,9 +62,6 @@ ConnectionPrefix = Pr\u00e9fix Connexion
 ConnectionName = Nom Connexion
 
 # From AbstractLoaderPane and loconet/downloader/LoaderPane
-
-ButtonSelect = S\u00e9lectionner
-
 ButtonLoad = T\u00e9l\u00e9chargement
 ButtonVerify = V\u00e9rifier
 ButtonAbort = Abandonner
@@ -98,9 +95,6 @@ Button24bit = 24 bit
 
 FileFilterLabel = Fichiers Firmware ({0})
 
-#Title message used at the top of modal dialog boxes when an error occurs
-ErrorTitle = Erreur
-
 ErrorNoInputFile = vous devez en premier s\u00e9lectionner un fichier d'entr\u00e9e
 ErrorFileNotFound = Fichier non trouv\u00e9
 ErrorFileContentsError = <html><font color="#FF0000">Le Firmware contenu dans ce fichier n'est pas compris par ce lecteur.</html>
@@ -127,3 +121,10 @@ ErrorInvalidValueInGUI = <html><font color\="\#FF0000">Invalide <b>{0}</b> </htm
 ErrorSingleConnection = Impossible de cr\u00e9er la connexion \"{0}\" ({1}).
 # Multiple connection errors
 ErrorMultipleConnections = Impossible de cr\u00e9er de multiple connexions.
+
+# cmri/rps/maple/secsi/acela/grapevine shared items
+ConfigNodesTitle    = Configurer les noeuds
+
+LabelNodeAddress    = Adresse du Noeud:
+ReminderNode1       = N'oubliez pas de sauvegarder votre nouvelle information de noeud.
+Reminder2           = Utilisez le bouton Enregistrer dans la fen\u00eatre Pr\u00e9f\u00e9rences.
