--- a/java/src/jmri/jmrix/JmrixBundle_it.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_it.properties
@@ -100,7 +100,7 @@ MenuItemSendCommand     = Invio Comandi
 # Slot Monitor strings
 AddressCol              = Indirizzo
 
-# cmri/rps/maple/acela/grapevine shared items
+# cmri/rps/maple/secsi/acela/grapevine shared items
 ConfigNodesTitle        = Configura Nodi
 NodePanelName           = Nodo
 NodeBoxLabel            = Nodo:
@@ -112,11 +112,34 @@ ShowOutputTip           = Seleziona questo pulsante per Visualizzare Assegnazion
 InputBitsAnd            = bits Ingresso e
 OutputBits              = bits Uscita
 
+LabelNodeAddress        = Indirizzo Nodo:
 ButtonAdd               = Aggiungi Nodo
 ButtonEdit              = Modifica Nodo
 ButtonDelete            = Cancella Nodo
 ButtonInit              = Inizializza Nodo
 ButtonUpdate            = Aggiorna Node
+ReminderNode1           = Ricorda di salvare le informazione del nuovo Nodo.
+Reminder2               = Usare il pulsante "Salva" nella finestra "Preferenze".
+
+ConfirmDelete1          = Sei sicuro di cancellare questo Nodo?
+ConfirmDelete2          = Saranno interessati tutti i Sensori, Scambi o Luci con questo indirizzo di Nodo.
+ConfirmDeleteTitle      = Confermare la Cancellazione
+ConfirmUpdate2          = Saranno interessati gli indirizzi di Sensori, Scambi e Luci.
+ConfirmUpdate3          = sei sicuro di voleraggiornare questo Nodo?
+ConfirmUpdateTitle      = Confermare l'aggiornamento
+
+# Node edit feedback
+# The longest of the next three lines determines the window width.
+NotesStd1 = Per aggiungere un nuovo nodo, immettere le informazioni e selezionare 'Aggiungi Nodo'.
+NotesStd2 = Per modificare un nodo, immettere l'indirizzo del nodo, quindi selezionare 'Modifica nodo'.
+NotesStd3 = Per eliminare un nodo, immettere l'indirizzo del nodo, quindi selezionare 'Elimina nodo'.
+# These three lines must be shorter than the longest line above.
+NotesEdit1 = Controllare l'indirizzo del nodo prima di apportare modifiche.
+NotesEdit2 = Per modificare questo nodo, apporta le modifiche, quindi seleziona 'Aggiorna nodo'.
+NotesEdit3 = Per uscire senza cambiare questo nodo, seleziona 'Annulla'.
+# All Errorxx lines below must be shorter than the longest NotesStdx line above. Can override in package nodeconfig Bundle
+Error1 = Errore - Il Nodo con L'indirizzo '{}' esiste gi\u2021, riprova.
+Error3 = Errore nella creazione nuovo nodo. Nodo non aggiunto.
 
 #Error message displayed on start if internal connection has all defaults.
 ManagerDefaultSelector.AllInternal=All defaults are assigned to an internal connection.
