--- a/java/src/jmri/jmrix/JmrixBundle_nl.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_nl.properties
@@ -209,6 +209,7 @@ SendXCommandTitle       = Verstuur {0}-commando
 CommandLabel            = Commando:
 ReplyLabel              = Antwoord:
 EnterASCIIToolTip       = Voer commando in als ASCII text (hex nog niet beschikbaar)
+EnterHexToolTip         = Voer commando in als Hexadecimale bytes, gescheiden door spaties
 TooltipSent             = Aantal verstuurde Packets
 TooltipReceived         = Aantal ontvangen Packets
 TooltipClearCounters    = Maak Verstuurd/Ontvangen Packets tellers leeg
@@ -216,7 +217,9 @@ SentTitle               = Verstuurd
 ReceivedTitle           = Ontvangen
 Timeout                 = Timeout
 
-# cmri/rps/maple/acela/grapevine shared items
+# cmri/rps/maple/secsiacela/grapevine shared items
+ConfigNodesTitle        = Configureer Nodes
+ButtonQueryNode         = Zoek Node
 LabelPoll               = Verzoek
 PollToolTip             = Verstuur verzoek
 NodePanelName           = Node
@@ -229,6 +232,9 @@ ShowOutputTip           = Selecteer om in de lijst alle output bit toewijzingen 
 HeadingBit              = Bit
 InputBitsAnd            = input bits en
 OutputBits              = output bits
+
+LabelNodeAddress        = Node-adres:
+TooltipNodeAddress      = Voer adres van Node in (decimaal, geheel getal)
 ButtonAdd               = Voeg Node toe
 ButtonEdit              = Bewerk Node
 ButtonDelete            = Verwijder Node
