--- a/java/src/jmri/jmrix/cmri/serial/nodeconfig/NodeConfigBundle_nl.properties
+++ b/java/src/jmri/jmrix/cmri/serial/nodeconfig/NodeConfigBundle_nl.properties
@@ -98,5 +98,5 @@ ConfirmUpdate2      = Adressen van Terugmelders, Wissels en Lichten kunnen wegva
 ConfirmUpdate3      = Weet je zeker dat je deze Node wilt bijwerken?
 ConfirmUpdateTitle  = Bevestig bijwerken
 
-Reminder1           = Vergeet niet om de nieuwe C/MRI node-informatie op schijf op te slaan.
+ReminderNode1       = Vergeet niet om de nieuwe C/MRI node-informatie op schijf op te slaan.
 Reminder2           = Klik op de [{0}]-knop in het Voorkeuren > Connecties venster.
