--- a/java/src/jmri/jmrix/grapevine/GrapevineBundle_nl.properties
+++ b/java/src/jmri/jmrix/grapevine/GrapevineBundle_nl.properties
@@ -1,16 +1,16 @@
 # GrapevineBundle.properties
 #
-# Default properties for the jmri.jmrix.grapevine menu
+# Dutch properties for the jmri.jmrix.grapevine menu
 
 MenuSystem                  = Grapevine
 
-MenuItemCommandMonitor      = Communications Monitor
+MenuItemCommandMonitor      = Communicatie-monitor
 MenuItemNodeTable           = Node Table
 
 GrapevineSerialName         = Grapevine (ProTrak) Layout Bus
 ErrorInvalidMessageLength   = Entered message string has invalid length.\nEnter as a 4 byte hex string.
 
-ButtonSetParity             = Set Parity
+ButtonSetParity             = Zet Parity om
 
 # GrapevineTurnout (Add to table pane) items
 AddOutputEntryToolTip       = 22103 (output, card/bank 1, connector 3)
