--- a/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_fr.properties
+++ b/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_fr.properties
@@ -1,11 +1,8 @@
 # NodeConfigBundle_fr.properties
 #
-#
-#
-# Default properties for the jmri.jmrix.maple.nodeconfig window
+# French properties for the jmri.jmrix.maple.nodeconfig window
 #
 # Translated by Herv\u00e9 BLOREC <bzh56420@yahoo.fr> le 2013-8-19
-
 
 WindowTitle = Configurer Noeuds Maple
 ConfigureMapleNodes = Configurer Noeuds Maple du Panneau
@@ -36,9 +33,7 @@ TipCancelButton = Arr\u00eat modification sans changer les informations du noeud
 ButtonAdd = Ajt Pann
 ButtonEdit = Modif Pann
 ButtonDelete = Supp Pann
-ButtonDone = Fait
 ButtonUpdate = M \u00e0 J Pann
-ButtonCancel = Annuler
 
 # Le plus long des trois prochaines lignes d\u00e9termine la largeur de la fen\u00eatre.
 NotesStd1 = Ajout d'un nouveau noeud de panneau, saisissez les informations et s\u00e9lectionnez "Ajouter Panneau".
@@ -51,8 +46,8 @@ NotesEdit3 = Pour quitter sans modifier ce volet, s\u00e9lectionnez "Annuler".
 
 # Toutes les lignes Errorxx ci-dessous doivent \u00eatre plus courte que la plus longue ligne NotesStdx ci-dessus.
 Error1 = Erreur - Noeud avec "Adresse Station" entr\u00e9e
-Erreur2 = Existe d\u00e9j\u00e0.
-ERROR3 = Erreur lors de la cr\u00e9ation nouveau noeud du panneau. Panneau pas ajout\u00e9.
+Error2 = Existe d\u00e9j\u00e0.
+Error3 = Erreur lors de la cr\u00e9ation nouveau noeud du panneau. Panneau pas ajout\u00e9.
 Error4 = Erreur - Aucun noeud avec  Adresse de la Station entr\u00e9e, veuillez r\u00e9essayer.
 Error5 = erreur - mauvaise caract\u00e8re dans l'adresse de station (UA), veuillez r\u00e9essayer.
 Error6 = Erreur - Adresse de la station n'est pas entre 0 et 99.
@@ -81,6 +76,5 @@ ConfirmDeleteTitle = Confirmer la suppression
 ConfirmUpdate3 = Etes-vous s\u00fbr de vouloir mettre \u00e0 jour la configuration de ce noeud du panneau?
 ConfirmUpdateTitle = Confirmer mise \u00e0 jour
 
-Reminder1 = N'oubliez pas de sauvegarder vos nouvelles informations de configuration Maplesur le disque.
+ReminderNode1 = N'oubliez pas de sauvegarder vos nouvelles informations de configuration Maple sur le disque.
 Reminder2 = Utilisez le bouton Enregistrer dans la fen\u00eatre Pr\u00e9f\u00e9rences.
-ReminderTitle = Rappel
