--- a/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_it.properties
+++ b/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_it.properties
@@ -54,22 +54,22 @@ Error2 = ' introdotto, esiste gi\u2021.
 Error3 = Errore nella creazione del nuovo Pannello. Pannello non aggiunto.
 Error4 = Errore - Nessun nodo con questo indirizzo di Stazione, prova di nuovo.
 Error5 = Errore - Carattere errato nell'indirizzo di Stazione (UA), prova di nuovo.
-Error6 = Errore - Indirizzo di Stazione non \u00E8 tra 0 e 99.
+Error6 = Errore - Indirizzo di Stazione non \u00e8 tra 0 e 99.
 Error7 = Errore - Carattere errato nel Tempo di Timeout alla risposta, prova di nuovo.
 Error8 = Errore - Tempo di Timeout alla risposta deve essere positivo, prova di nuovo.
-Error9 = Errore - Tempo di Timeout alla risposta non pu\u00F2 eccedere 10000, prova di nuovo.
+Error9 = Errore - Tempo di Timeout alla risposta non pu\u00f2 eccedere 10000, prova di nuovo.
 Error10 = Errore - Carattere errato nel numero di bits in ingresso, prova di nuovo.
 Error11 = Errore - Il numero di bits in ingresso deve essere positivo, prova di nuovo.
-Error12 = Errore - Il numero di bits in ingresso non pu\u00F2 eccedere 1000, prova di nuovo.
+Error12 = Errore - Il numero di bits in ingresso non pu\u00f2 eccedere 1000, prova di nuovo.
 Error13 = Errore - Carattere errato nel Numero di Bits di uscita, prova di nuovo.
 Error14 = Errore - Numero di Bits di uscita deve essere positivo, prova di nuovo.
-Error15 = Errore - Numero di Bits di uscita non pu\u00F2 eccedere 8000, prova di nuovo.
+Error15 = Errore - Numero di Bits di uscita non pu\u00f2 eccedere 8000, prova di nuovo.
 # Error16   = Errore - Durata Impulsi deve essere almeno 100, prova di nuovo.
 # Error17   = Errore - Durata Impulsi deve essere minore di 10000, prova di nuovo.
 # Error18   = Errore - Carattere errato in Durata Impulsi, prova di nuovo.
 Error19 = Error - Carattere errato Ritardo Invio, prova di nuovo.
 Error20 = Error - Ritardo Invio deve essere positivo, prova di nuovo.
-Error21 = Error - Ritardo Invio non pu\u00F2 eccedere 10000, prova di nuovo.
+Error21 = Error - Ritardo Invio non pu\u00f2 eccedere 10000, prova di nuovo.
 
 FeedBackAdd = Aggiunto Pannello Nodo Maple. Indirizzo Stazione
 FeedBackDelete = Cancellato Pannello Nodo Maple. Indirizzo Stazione
@@ -80,6 +80,5 @@ ConfirmDeleteTitle = Conferma Cancellazione
 ConfirmUpdate3 = Sei sicuro di voler aggiornare la configurazione di questo Pannello di nodo?
 ConfirmUpdateTitle = Conferma Aggiornamento
 
-Reminder1 = Ricorda di salvare la tua nuova configurazione Maple su disco.
+ReminderNode1 = Ricorda di salvare la tua nuova configurazione Maple su disco.
 Reminder2 = Usa il bottone Salva nella finestra Preferenze.
-ReminderTitle = Promemoria
