--- a/java/src/jmri/jmrix/secsi/nodeconfig/NodeConfigBundle_de.properties
+++ b/java/src/jmri/jmrix/secsi/nodeconfig/NodeConfigBundle_de.properties
@@ -1,15 +1,11 @@
-# NodeConfigBundle.properties
-#
+# NodeConfigBundle_de.properties
 #
 # by Simon Ginsburg
 # German properties for the jmri.jmrix.secsi.nodeconfig window
 
-WindowTitle    = Knotenkonfigurator
-
-BoxLabelNotes  = Bemerkungen
+BoxLabelNotes       = Bemerkungen
 
 LabelCardSize       = Kartengr\u00f6\u00dfe:
-LabelNodeAddress    = Knotenadresse:
 LabelNodeType       = Knotentyp:
 
 TipNodeAddress      = Eingabe der Kontenadresse, beginnend bei 0
@@ -24,9 +20,7 @@ TipCancelButton     = Breche Bearbeiten ab
 ButtonAdd           = Knoten hinzuf\u00fcgen
 ButtonEdit          = Knoten bearbeiten
 ButtonDelete        = Knoten l\u00f6schen
-ButtonDone          = Beenden
 ButtonUpdate        = Knoten aktualisieren
-ButtonCancel        = Abbrechen
 
 # The longest of the next three lines determines the window width.
 NotesStd1   = Zur Erzeugung eines Knotens Parameter eingeben und 'Erg\u00e4nze neuen Knoten' klicken.
@@ -55,7 +49,3 @@ ConfirmDeleteTitle = L\u00f6schen best\u00e4tigen
 ConfirmUpdate2  = Detektoren, Weichen oder Signale mit dieser Kontenadresse k\u00f6nnen betroffen sein.
 ConfirmUpdate3  = Knoten wirklich aktualisieren?
 ConfirmUpdateTitle  = Aktualisierung best\u00e4tigen
-
-Reminder1  = Speichern der neuen Knoteninformation nicht vergessen.
-Reminder2  = Speicherknopf im Fenster Voreinstellungen benutzen.
-ReminderTitle = Erinnerung
