--- a/java/src/jmri/jmrix/secsi/nodeconfig/NodeConfigBundle_it.properties
+++ b/java/src/jmri/jmrix/secsi/nodeconfig/NodeConfigBundle_it.properties
@@ -1,17 +1,11 @@
-# NodeConfigBundle.properties
+# NodeConfigBundle_it.properties
 #
-#
-#
-# Italian translation: Enzo Fortuna (babbo_enzo@yahoo.com )
-#
-# Default properties for the jmri.jmrix.secsi.nodeconfig window
-
-WindowTitle    = Configura Nodi
+# Italian properties for the jmri.jmrix.secsi.nodeconfig window
+# Translation: Enzo Fortuna (babbo_enzo@yahoo.com )
 
 BoxLabelNotes  = Note
 
 LabelCardSize       = Formato Scheda:
-LabelNodeAddress    = Indirizzo Nodo:
 LabelNodeType       = Tipo Nodo:
 
 TipNodeAddress      = Batti Indirizzo Nodo, partendo da 0.
@@ -26,9 +20,7 @@ TipCancelButton     = Termina Modifica senza cambiamenti al nodo
 ButtonAdd           = Aggiungi Nodo
 ButtonEdit          = Modifica Nodo
 ButtonDelete        = Cancella Nodo
-ButtonDone          = Fatto
 ButtonUpdate        = Aggiorna Nodo
-ButtonCancel        = Annulla 
 
 # The longest of the next three lines determines the window width.
 NotesStd1   = Per Aggiungere un nuovo Nodo, batti le informazioni e seleziona 'Aggiungi Nodo'.
@@ -41,11 +33,11 @@ NotesEdit3  = Per terminare le modifiche senza cambiare nulla, seleziona 'Annull
 
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
 Error1    = Errore - Il Nodo con indirizzo '
-Error2    = ' esiste gi\u00E0, riprovare.
+Error2    = ' esiste gi\u00e0, riprovare.
 Error3    = Errore nella creazione del nodo. Il Nodo non \u00cb stato aggiunto.
 Error4    = Errore - Nessun nodo con questo indirizzo (UA), riprovare.
 Error5    = Errore - Carattere invalido nell'indirizzo Nodo (UA), riprovare.
-Error6    = Errore - L'indirizzo del Nodo non \u00E8 tra 0 e 255.
+Error6    = Errore - L'indirizzo del Nodo non \u00e8 tra 0 e 255.
 
 FeedBackAdd     = Nodo Aggiunto. Indirizzo Nodo =
 FeedBackDelete  = Nodo Cancellato. Indirizzo Nodo =
@@ -57,7 +49,3 @@ ConfirmDeleteTitle = Conferma Cancellazione
 ConfirmUpdate2  = Indirizzi di Sensori, Scambi e Luci possono essere influenzati.
 ConfirmUpdate3  = Sei sicuro di voler aggiornare questo Nodo?
 ConfirmUpdateTitle  = Conferma le Modifiche
-
-Reminder1  = Ricorda di salvare le informazione del nuovo Nodo.
-Reminder2  = Usare il pulsante "Salva" nella finestra "Preferenze".
-ReminderTitle = Attenzione
