--- a/java/src/jmri/jmrix/secsi/nodeconfig/NodeConfigBundle_ja_JP.properties
+++ b/java/src/jmri/jmrix/secsi/nodeconfig/NodeConfigBundle_ja_JP.properties
@@ -1,32 +1,25 @@
-# NodeConfigBundle.properties
-#
-#
+# NodeConfigBundle_ja_JP.properties
 #
 # Japanese properties for the jmri.jmrix.secsi.nodeconfig window
 
-WindowTitle    = \u30CE\u30FC\u30C9\u8A2D\u5B9A
+BoxLabelNotes  = \u30ce\u30fc\u30c9
 
-BoxLabelNotes  = \u30CE\u30FC\u30C9
-
-LabelCardSize       = \u30AB\u30FC\u30C9\u30B5\u30A4\u30BA
-LabelNodeAddress    = Node Address:
+LabelCardSize       = \u30ab\u30fc\u30c9\u30b5\u30a4\u30ba
 LabelNodeType       = Node Type:
 
 TipNodeAddress      = Enter node address, numbering from 0.
-TipNodeType         = \u30CE\u30FC\u30C9\u306E\u7A2E\u985E\u3092\u7DE8\u96C6\u3059\u308B
+TipNodeType         = \u30ce\u30fc\u30c9\u306e\u7a2e\u985e\u3092\u7de8\u96c6\u3059\u308b
 TipAddButton        = Add a new node
-TipEditButton       = \u65E2\u5B58\u306E\u30CE\u30FC\u30C9\u3092\u7DE8\u96C6\u3059\u308B
+TipEditButton       = \u65e2\u5b58\u306e\u30ce\u30fc\u30c9\u3092\u7de8\u96c6\u3059\u308b
 TipDeleteButton     = Delete an existing node
 TipDoneButton       = Select when done configuring nodes
 TipUpdateButton     = Change node information
 TipCancelButton     = Stop edit without changing node
 
-ButtonAdd           = Node\u8FFD\u52A0
-ButtonEdit          = Node\u7DE8\u96C6
-ButtonDelete        = Node\u524A\u9664
-ButtonDone          = \u5B8C\u4E86
-ButtonUpdate        = Node\u66F4\u65B0
-ButtonCancel        = Cancel 
+ButtonAdd           = Node\u8ffd\u52a0
+ButtonEdit          = Node\u7de8\u96c6
+ButtonDelete        = Node\u524a\u9664
+ButtonUpdate        = Node\u66f4\u65b0
 
 # The longest of the next three lines determines the window width.
 NotesStd1   = To Add a new node, enter information and select 'Add Node'.
@@ -55,7 +48,3 @@ ConfirmDeleteTitle = Confirm Deletion
 ConfirmUpdate2  = Sensor, Turnout, and Light addresses may be affected.
 ConfirmUpdate3  = Are you sure you want to update this node?
 ConfirmUpdateTitle  = Confirm Update
-
-Reminder1  = Remember to save your new node information.
-Reminder2  = Use the Save button in the Preferences window.
-ReminderTitle = Reminder
