i18n oaktree, grapevine JSpinner to set node address fix vars in strings

--- a/java/src/jmri/jmrix/JmrixBundle_de.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_de.properties
@@ -234,7 +234,7 @@ NotesEdit1  = Bitte Knotenadresse vor bearbeiten \u00fcberpr\u00fcfen.
 NotesEdit2  = Um diesen Knoten zu \u00e4ndern, Parameter \u00e4ndern und 'Knoten bearbeiten' klicken.
 NotesEdit3  = Um ohne Speichern Bearbeitung zu verlassen 'Abbrechen' klicken.
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
-Error1    = Fehler - Knoten auf Adresse '{}' existiert bereits, bitte \u00e4ndern.
+Error1=Fehler - Knoten auf Adresse '{0}' existiert bereits, bitte \u00e4ndern.
 Error3    = Fehler beim Erzeugen des Knotens. Knoten nicht erzeugt.
 
 ConnectionPrefixDialog  = Verbindungsvorlauf {0} wirdt schon genutzt
@@ -249,8 +249,9 @@ ProtocolVersionLabel    = Protokoll-Version:
 ApplicationVersionLabel = Applikationsversion:
 
 #Error message displayed on start if internal connection has all defaults.
-ManagerDefaultSelector.AllInternal=All defaults are assigned to an internal connection.
+ManagerDefaultSelector.AllInternal=Alle Vorzug-eingaben sind zugewiesen an die Interne Verbindung.
 
 # Lenz items
 ButtonResetDefaults     = Werkseinstellungen
 UseDefaultValue         = Voreinstellung
+MenuItemConsole=Systemkonsole
