--- a/java/src/jmri/jmrix/JmrixBundle_fr.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_fr.properties
@@ -127,4 +127,4 @@ ConfigNodesTitle    = Configurer les noeuds
 
 LabelNodeAddress    = Adresse du Noeud:
 ReminderNode1       = N'oubliez pas de sauvegarder votre nouvelle information de noeud.
-Reminder2           = Utilisez le bouton Enregistrer dans la fen\u00eatre Pr\u00e9f\u00e9rences.
+Reminder2=Utilisez le bouton [Enregistrer] dans la fen\u00eatre Pr\u00e9f\u00e9rences.
