--- a/java/src/jmri/jmrix/JmrixBundle_it.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_it.properties
@@ -119,7 +119,7 @@ ButtonDelete            = Cancella Nodo
 ButtonInit              = Inizializza Nodo
 ButtonUpdate            = Aggiorna Node
 ReminderNode1           = Ricorda di salvare le informazione del nuovo Nodo.
-Reminder2               = Usare il pulsante "Salva" nella finestra "Preferenze".
+Reminder2=Usare il pulsante [Salva] nella finestra "Preferenze".
 
 ConfirmDelete1          = Sei sicuro di cancellare questo Nodo?
 ConfirmDelete2          = Saranno interessati tutti i Sensori, Scambi o Luci con questo indirizzo di Nodo.
@@ -130,7 +130,7 @@ ConfirmUpdateTitle      = Confermare l'aggiornamento
 
 # Node edit feedback
 # The longest of the next three lines determines the window width.
-NotesStd1 = Per aggiungere un nuovo nodo, immettere le informazioni e selezionare 'Aggiungi Nodo'.
+NotesStd1=Per aggiungere un nuovo Nodo, immettere le informazioni e selezionare 'Aggiungi Nodo'.
 NotesStd2 = Per modificare un nodo, immettere l'indirizzo del nodo, quindi selezionare 'Modifica nodo'.
 NotesStd3 = Per eliminare un nodo, immettere l'indirizzo del nodo, quindi selezionare 'Elimina nodo'.
 # These three lines must be shorter than the longest line above.
@@ -138,8 +138,8 @@ NotesEdit1 = Controllare l'indirizzo del nodo prima di apportare modifiche.
 NotesEdit2 = Per modificare questo nodo, apporta le modifiche, quindi seleziona 'Aggiorna nodo'.
 NotesEdit3 = Per uscire senza cambiare questo nodo, seleziona 'Annulla'.
 # All Errorxx lines below must be shorter than the longest NotesStdx line above. Can override in package nodeconfig Bundle
-Error1 = Errore - Il Nodo con L'indirizzo '{}' esiste gi\u2021, riprova.
-Error3 = Errore nella creazione nuovo nodo. Nodo non aggiunto.
+Error1=Errore - Il Nodo con l'indirizzo '{0}' esiste gi\u00e0, riprovare.
+Error3=Errore nella creazione del nuovo Nodo. Il Nodo non \u00e8 stato aggiunto.
 
 #Error message displayed on start if internal connection has all defaults.
 ManagerDefaultSelector.AllInternal=All defaults are assigned to an internal connection.
