--- a/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle_da.properties
+++ b/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle_da.properties
@@ -9,7 +9,7 @@ BoxLabelNotes       = Notes
 LabelCardSize       = Card Size:
 LabelNodeType       = Node Type:
 
-TipNodeAddress      = Enter node address, numbering from 1.
+TipNodeAddress      = Enter node address, numbering from 1 to 255 (included).
 TipNodeType         = Select type of node.
 TipAddButton        = Add a new node
 TipEditButton       = Edit an existing node
@@ -20,7 +20,7 @@ TipUpdateButton     = Change node information
 TipCancelButton     = Stop edit without changing node
 
 # The longest of the next three lines determines the window width.
-
+#NotesStd3   = To Delete a node, enter node address, then select 'Delete Node'. // moved to jmrix.Bundle
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
 Error4          = Error - No node with entered Node Address(UA), please try again.
 
