--- a/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle_de.properties
+++ b/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle_de.properties
@@ -10,7 +10,7 @@ BoxLabelNotes       = Bemerkungen
 LabelCardSize       = Kartengr\u00f6\u00dfe:
 LabelNodeType       = Knotentyp:
 
-TipNodeAddress      = Eingabe der Knotenadresse, beginnend von 1 bis 255
+TipNodeAddress      = Eingabe der Knotenadresse, g\u00fcltigen Wert: von 1 bis 255
 TipNodeType         = W\u00e4hle Knotentyp.
 TipAddButton        = Erg\u00e4nze neuen Knoten
 TipEditButton       = Bearbeite bestehenden Knoten
