--- a/java/src/jmri/jmrix/oaktree/nodeconfig/NodeConfigBundle_fr.properties
+++ b/java/src/jmri/jmrix/oaktree/nodeconfig/NodeConfigBundle_fr.properties
@@ -2,14 +2,12 @@
 #
 # French properties for the jmri.jmrix.oaktree.nodeconfig window
 
-WindowTitle         = Configure Nodes
-
 BoxLabelNotes       = Notes
 
 LabelCardSize       = Card Size:
 LabelNodeType       = Node Type:
 
-TipNodeAddress      = Enter node address, numbering from 0.
+TipNodeAddress      = Enter node address, numbering from 0 to 255 (included).
 TipNodeType         = Select type of node.
 TipAddButton        = Add a new node
 TipEditButton       = Edit an existing node
@@ -17,11 +15,6 @@ TipDeleteButton     = Delete an existing node
 TipDoneButton       = Select when done configuring nodes
 TipUpdateButton     = Change node information
 TipCancelButton     = Stop edit without changing node
-
-ButtonAdd           = Add Node
-ButtonEdit          = Edit Node
-ButtonDelete        = Delete Node
-ButtonUpdate        = Update Node
 
 # The longest of the next three lines determines the window width.
 NotesStd1   = To Add a new node, enter information and select 'Add Node'.
@@ -33,9 +26,6 @@ NotesEdit2  = To change this node, make changes, then select 'Update Node'.
 NotesEdit3  = To leave Edit without changing this node, select 'Cancel'.
 
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
-Error1    = Error - Node with address '
-Error2    = ' already exists, please try again.
-Error3    = Error when creating new node. Node not added.
 Error4    = Error - No node with entered Node Address(UA), please try again.
 Error5    = Error - Bad character in Node Address (UA), please try again.
 Error6    = Error - Node Address is not between 0 and 255.
@@ -50,6 +40,3 @@ ConfirmDeleteTitle = Confirm Deletion
 ConfirmUpdate2  = Sensor, Turnout, and Light addresses may be affected.
 ConfirmUpdate3  = Are you sure you want to update this node?
 ConfirmUpdateTitle  = Confirm Update
-
-Reminder1  = Remember to save your new node information.
-Reminder2  = Use the Save button in the Preferences window.
