--- a/java/src/jmri/jmrix/oaktree/nodeconfig/NodeConfigBundle_it.properties
+++ b/java/src/jmri/jmrix/oaktree/nodeconfig/NodeConfigBundle_it.properties
@@ -3,14 +3,12 @@
 # Italian properties for the jmri.jmrix.oaktree.nodeconfig window
 # Translation: Enzo Fortuna (babbo_enzo@yahoo.com )
 
-WindowTitle         = Configura Nodi
-
 BoxLabelNotes       = Note
 
 LabelCardSize       = Formato Scheda:
 LabelNodeType       = Tipo Nodo:
 
-TipNodeAddress      = Batti l'indirizzo del Nodo, partendo da 0.
+TipNodeAddress      = Batti l'indirizzo del Nodo, partendo da 0 - 255
 TipNodeType         = Seleziona tipo di nodo.
 TipAddButton        = Aggiungi nuovo nodo
 TipEditButton       = Modifica un nodo esistente
@@ -18,11 +16,6 @@ TipDeleteButton     = Cancella un Nodo esistente
 TipDoneButton       = Selezionare quando terminato la configurazione nodi
 TipUpdateButton     = Modifica Informazioni del Nodo
 TipCancelButton     = Termina Modifica senza cambiamenti al nodo
-
-ButtonAdd           = Aggiungi Nodo
-ButtonEdit          = Modifica Nodo
-ButtonDelete        = Cancella Nodo
-ButtonUpdate        = Aggiorna Nodo
 
 # The longest of the next three lines determines the window width.
 NotesStd1   = Per Aggiungere un nuovo Nodo, batti le informazioni e seleziona 'Aggiungi Nodo'.
@@ -34,9 +27,6 @@ NotesEdit2  = Per modificare questo nodo, effettua le modifiche, e seleziona 'Ag
 NotesEdit3  = Per terminare le modifiche senza cambiare nulla, seleziona 'Annulla'.
 
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
-Error1    = Errore - Il Nodo con indirizzo '
-Error2    = ' esiste gi\u00e0, riprovare.
-Error3    = Errore nella creazione del nodo. Il Nodo non \u00e8 stato aggiunto.
 Error4    = Errore - Nessun nodo con questo indirizzo (UA), riprovare.
 Error5    = Errore - Carattere invalido nell'indirizzo Nodo (UA), riprovare.
 Error6    = Errore - L'indirizzo del Nodo non \u00e8 tra 0 e 255.
@@ -51,6 +41,3 @@ ConfirmDeleteTitle = Conferma Cancellazione
 ConfirmUpdate2  = Indirizzi di Sensori, Scambi e Luci possono essere influenzati.
 ConfirmUpdate3  = Sei sicuro di voler aggiornare questo Nodo?
 ConfirmUpdateTitle  = Conferma le Modifiche
-
-Reminder1  = Ricorda di salvare le informazione del nuovo Nodo.
-Reminder2  = Usare il pulsante "Salva" nella finestra "Preferenze".
