--- a/java/src/jmri/jmrix/oaktree/nodeconfig/NodeConfigBundle_ja_JP.properties
+++ b/java/src/jmri/jmrix/oaktree/nodeconfig/NodeConfigBundle_ja_JP.properties
@@ -3,14 +3,12 @@
 # Japanese properties for the jmri.jmrix.oaktree.nodeconfig window
 # Translated by Sakae Akanuma <sakaeakanuma@gmail.com>
 
-WindowTitle    = \u30ce\u30fc\u30c9\u8a2d\u5b9a
-
-BoxLabelNotes  = \u30ce\u30fc\u30c9
+BoxLabelNotes       = \u30ce\u30fc\u30c9
 
 LabelCardSize       = \u30ab\u30fc\u30c9\u30b5\u30a4\u30ba
 LabelNodeType       = \u30ce\u30fc\u30c9\u30bf\u30a4\u30d7:
 
-TipNodeAddress      = Enter\u30ce\u30fc\u30c9\u30a2\u30c9\u30ec\u30b9, numbering from 0.
+TipNodeAddress      = Enter\u30ce\u30fc\u30c9\u30a2\u30c9\u30ec\u30b9, numbering from 0 to 255 (included).
 TipNodeType         = \u30ce\u30fc\u30c9\u30bf\u30a4\u30d7\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044
 TipAddButton        = \u65b0\u898f\u30ce\u30fc\u30c9\u8ffd\u52a0
 TipEditButton       = Edit an existing node
@@ -18,11 +16,6 @@ TipDeleteButton     = Delete an existing node
 TipDoneButton       = Select when done configuring nodes
 TipUpdateButton     = Change\u30ce\u30fc\u30c9information
 TipCancelButton     = Stop edit without changing node
-
-ButtonAdd           = Add Node
-ButtonEdit          = Edit Node
-ButtonDelete        = Delete Node
-ButtonUpdate        = Update Node
 
 # The longest of the next three lines determines the window width.
 NotesStd1   = To Add a new node, enter information and select 'Add Node'.
@@ -34,9 +27,6 @@ NotesEdit2  = To change this node, make changes, then select 'Update Node'.
 NotesEdit3  = To leave Edit without changing this node, select 'Cancel'.
 
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
-Error1    = \u30a8\u30e9\u30fc -\u30ce\u30fc\u30c9with \u30a2\u30c9\u30ec\u30b9 '
-Error2    = ' already exists, please try again.
-Error3    = Error when creating new node.\u30ce\u30fc\u30c9not added.
 Error4    = \u30a8\u30e9\u30fc - No\u30ce\u30fc\u30c9with entered\u30ce\u30fc\u30c9Address(UA), please try again.
 Error5    = \u30a8\u30e9\u30fc - Bad character in\u30ce\u30fc\u30c9Address (UA), please try again.
 Error6    = \u30a8\u30e9\u30fc - \u30ce\u30fc\u30c9\u30a2\u30c9\u30ec\u30b9\u306f0\uff5e255\u306e\u7bc4\u56f2\u306b\u3057\u3066\u4e0b\u3055\u3044\u3002
@@ -51,6 +41,3 @@ ConfirmDeleteTitle = \u524a\u9664\u78ba\u8a8d
 ConfirmUpdate2  = Sensor, Turnout, and Light \u30a2\u30c9\u30ec\u30b9es may be affected.
 ConfirmUpdate3  = Are you sure you want to update this node?
 ConfirmUpdateTitle  = \u66f4\u65b0\u78ba\u8a8d
-
-Reminder1  = Remember to save your new\u30ce\u30fc\u30c9information.
-Reminder2  = Use the Save button in the Preferences window.
