--- a/java/src/jmri/jmrix/JmrixBundle_ja_JP.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_ja_JP.properties
@@ -70,10 +70,10 @@ ButtonDelete        = \u30ce\u30fc\u30c9\u524a\u9664
 ButtonInit          = \u30ce\u30fc\u30c9\u521d\u671f\u5316
 ButtonUpdate        = Update Node
 ReminderNode1       = Remember to save your new node information.
-Reminder2           = Use the Save button in the Preferences window.
+Reminder2           = Use the [Save] button in the Preferences window.
 
 ConfirmDelete1      = Are you sure you want to delete this node?
-ConfirmDelete2      = Any Sensors, Turnouts, or Lights with this node address will be affected.
+ConfirmDelete2      = Any Sensors, Turnouts, or Lights with this Node Address will be affected.
 ConfirmDeleteTitle  = \u524a\u9664\u78ba\u8a8d
 ConfirmUpdate2      = Sensor, Turnout, and Light addresses may be affected.
 ConfirmUpdate3      = Are you sure you want to update this node?
@@ -81,7 +81,7 @@ ConfirmUpdateTitle  = \u66f4\u65b0\u78ba\u8a8d
 
 # Node edit feedback
 # The longest of the next three lines determines the window width.
-NotesStd1   = To Add a new node, enter information and select 'Add Node'.
+NotesStd1   = To Add a new Node, enter information and select 'Add Node'.
 NotesStd2   = To Edit a node, enter node address, then select 'Edit Node'.
 NotesStd3   = To Delete a node, enter node address, then select 'Delete Node'.
 # These three lines must be shorter than the longest line above.
@@ -89,7 +89,8 @@ NotesEdit1  = Please check Node Address before making changes.
 NotesEdit2  = To change this node, make changes, then select 'Update Node'.
 NotesEdit3  = \u30ce\u30fc\u30c9\u3092\u5909\u66f4\u305b\u305a\u306b\u7de8\u96c6\u3092\u7d42\u4e86\u3059\u308b\u306b\u306f\u3001'\u30ad\u30e3\u30f3\u30bb\u30eb'\u3092\u9078\u3093\u3067\u4e0b\u3055\u3044\u3002
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
-Error4    = Error - No node with entered Node Address(UA), please try again.
+Error1      = \u30a8\u30e9\u30fc -\u30ce\u30fc\u30c9with \u30a2\u30c9\u30ec\u30b9 '{0}' already exists, please try again.
+Error3      = Error when creating new Node.\u30ce\u30fc\u30c9not added.
 
 #Error message displayed on start if internal connection has all defaults.
 ManagerDefaultSelector.AllInternal = All defaults are assigned to an internal connection.
