--- a/java/src/jmri/jmrix/JmrixBundle_nl.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_nl.properties
@@ -93,7 +93,7 @@ StatusReadFile          = Klik op [Lees bestand] om het firmware bestand in te l
 StatusDoDownload        = Klik op [Download] om een nieuw firmware bestand te downloaden
 StatusDownloading       = Apparaat firmware bijwerken...
 StatusVerifying         = Apparaat firmware controleren...
-StatusAbort             = <html><font color="\#ff0000">Bewerking afgebroken</html>
+StatusAbort             = <html><font color= "\#ff0000">Bewerking afgebroken</html>
 StatusDone              = Bewerking voltooid
 StatusWriteX            = Schrijf {0}
 StatusWriteComplete     = Schrijven voltooid
@@ -136,13 +136,13 @@ FileFilterLabel         = Firmwarebestanden ({0})
 
 #Title message used at the top of modal dialog boxes when an error occurs
 
-ErrorNoInputFile        = <html><font color="\#ff0000">Selecteer een invoerbestand.</html>
-ErrorFileNotFound       = <html><font color="\#ff0000">Bestand niet gevonden.</html>
-ErrorFileContentsError  = <html><font color="\#ff0000">Firmware inhoud in bestand kon niet verwerkt worden door deze leesmodule.</html>
-ErrorFileReadError      = <html><font color\="\#ff0000">Firmwarebestand kon niet gelezen worden.</html>
-ErrorInvalidParameter   = <html><font color\="\#ff0000">Ongeldige parameter(s) ingegeven.</html>
-ErrorEmptyFirmwareFile  = <html><font color="\#ff0000">Geen firmware informatie om te verzenden.</html>
-ErrorCannotOpenFileForWriting=<html><font color="\#ff0000">Kan bestand <font color="\#000000">{0}<font color="\#ff0000"> niet openen.<p><font color="#000000">{1}</html>">
+ErrorNoInputFile        = <html><font color= "\#ff0000">Selecteer een invoerbestand.</html>
+ErrorFileNotFound       = <html><font color= "\#ff0000">Bestand niet gevonden.</html>
+ErrorFileContentsError  = <html><font color= "\#ff0000">Firmware inhoud in bestand kon niet verwerkt worden door deze leesmodule.</html>
+ErrorFileReadError      = <html><font color\= "\#ff0000">Firmwarebestand kon niet gelezen worden.</html>
+ErrorInvalidParameter   = <html><font color\= "\#ff0000">Ongeldige parameter(s) ingegeven.</html>
+ErrorEmptyFirmwareFile  = <html><font color= "\#ff0000">Geen firmware informatie om te verzenden.</html>
+ErrorCannotOpenFileForWriting= <html><font color= "\#ff0000">Kan bestand <font color= "\#000000">{0}<font color= "\#ff0000"> niet openen.<p><font color= "#000000">{1}</html>">
 ErrorPossibleCauseCannotOpenForWrite = <html>Mogelijke oplossingen:<p><ul><li>Kies een ander bestand</li><li>Controleer of de map bestaat met schrijfrechten</li><li>Controleer of het bestand overschrijfbaar is</li><<li>Controleer dat het bestand niet geopend is in een andere toepassing</li><li>Controleer de beveiligingsinstellingen</li></ul></html>
 
 # Note - The following message will be used when a firmware update file is read
@@ -150,14 +150,14 @@ ErrorPossibleCauseCannotOpenForWrite = <html>Mogelijke oplossingen:<p><ul><li>Ki
 #       a key/value pair.  The {0} parameter will be replaced with the value
 #       which cannot be interpreted.  The {1} will be replaced with the
 #       associated key name.
-ErrorInvalidOptionInFile = <html><font color="\#ff0000">Ongeldige waarde voor <b>{1}</b> sleutel in invoerbestand:</html>\n<html><font color="#000000">{0}</html>
+ErrorInvalidOptionInFile = <html><font color= "\#ff0000">Ongeldige waarde voor <b>{1}</b> sleutel in invoerbestand:</html>\n<html><font color= "#000000">{0}</html>
 
 # Note - The following message will be used when a Download or Verify operation
 #       is requested and the tool finds that one of the values in the GUI has
 #       an invalid value.  The {0} parameter will be replaced with the Key name.
 #       The {1} parameter will be replaced with the invalid value from the GUI
 #       field.
-ErrorInvalidValueInGUI  = <html><font color\="\#ff0000">Ongeldige <b>{0}</b> </html>\n<html><font color\="\#010101">{1}</html>
+ErrorInvalidValueInGUI  = <html><font color\= "\#ff0000">Ongeldige <b>{0}</b> </html>\n<html><font color\= "\#010101">{1}</html>
 
 # Startup Exceptions
 # Error creating single connection {0} - UserName, {1} - SystemName
@@ -238,8 +238,30 @@ TooltipNodeAddress      = Voer adres van Node in (decimaal, geheel getal)
 ButtonAdd               = Voeg Node toe
 ButtonEdit              = Bewerk Node
 ButtonDelete            = Verwijder Node
-ButtonInit              = Initiliseer Node
+ButtonInit              = Initialiseer Node
 ButtonUpdate            = Werk Node bij
+ReminderNode1           = Vergeet niet om de gewijzigde instellingen voor de Node op te slaan.
+Reminder2               = Gebruik hiervoor de [Bewaar] knop in het JMRI Voorkeuren-venster.
+
+ConfirmDeleteTitle      = Bevestig verwijderen
+ConfirmDelete1          = Deze Node (module) wissen?
+ConfirmDelete2          = Alle Terugmelders, Wissels en Lampen met dit Node-adres worden verwijderd.
+ConfirmUpdateTitle      = Bevestig bijwerken
+ConfirmUpdate2          = Terugmelders, Wissels en Lampen met dit Node-adres kunnen worden be\u00efnvloed.
+ConfirmUpdate3          = Deze Node bijwerken?
+
+# Node edit feedback
+# The longest of the next three lines determines the window width.
+NotesStd1               = Voer kenmerken in en klik op [Voeg Node toe].
+NotesStd2               = Pas kenmerken aan en klik op [Werk Node bij.
+NotesStd3               = Stel Node-adres in en klik op [Wis Node] om een Node te verwijderen uit de configuratie.
+# These three lines must be shorter than the longest line above.
+NotesEdit1              = Controleer het Node-adres voordat je wijzigingen aanbrengt.
+NotesEdit2              = Vul kenmerken in en klik op [Werk Node bij] om deze Node aan te passen.
+NotesEdit3              = Klik op [Annuleer] om dit scherm te sluiten zonder wijzigingen door te voeren.
+# All Errorxx lines below must be shorter than the longest NotesStdx line above. Can override in package nodeconfig Bundle
+Error1                  = Fout - Er bestaat al een Node met adres {0}. Kies een ander adres.
+Error3                  = Fout bij het aanmaken van nieuwe Node. Node niet toegevoegd.
 
 # Lenz XpressNet/Roco Z21 shared config items
 GetSystemInfoButtonLabel = Vraag Systeem-info op
@@ -248,7 +270,9 @@ HardwareVersionLabel    = Hardware-versie:
 SoftwareVersionLabel    = Software-versie:
 ApplicationVersionLabel = Applicatie-versie
 ProtocolVersionLabel    = Protocol-versie:
-
 UseDefaultValue         = Gebruik standaardwaarde
 ButtonResetDefaults     = Standaardwaardes
+MenuItemConsole         = Systeemconsole
 
+#Error message displayed on start if internal connection has all defaults.
+ManagerDefaultSelector.AllInternal = Alle Standaard-opties zijn toegewezen aan de Interne connectie.
