--- a/java/src/jmri/jmrix/oaktree/nodeconfig/NodeConfigBundle_de.properties
+++ b/java/src/jmri/jmrix/oaktree/nodeconfig/NodeConfigBundle_de.properties
@@ -3,14 +3,12 @@
 # by Simon Ginsburg
 # German properties for the jmri.jmrix.oaktree.nodeconfig window
 
-WindowTitle         = Knotenkonfigurator
-
 BoxLabelNotes       = Bemerkungen
 
 LabelCardSize       = Kartengr\u00f6\u00dfe:
 LabelNodeType       = Knotentyp:
 
-TipNodeAddress      = Eingabe der Kontenadresse, beginnend bei 0
+TipNodeAddress      = Eingabe der Kontenadresse, beginnend bei 0 bis 255
 TipNodeType         = W\u00e4hle Knotentyp.
 TipAddButton        = Erg\u00e4nze neuen Knoten
 TipEditButton       = Bearbeite bestehenden Knoten
@@ -18,11 +16,6 @@ TipDeleteButton     = L\u00f6sche bestehenden Knoten
 TipDoneButton       = W\u00e4hle wenn Knotenkonfiguration abgeschlossen
 TipUpdateButton     = \u00c4ndere Knoteninformation
 TipCancelButton     = Breche Bearbeiten ab
-
-ButtonAdd           = Knoten hinzuf\u00fcgen
-ButtonEdit          = Knoten bearbeiten
-ButtonDelete        = Knoten l\u00f6schen
-ButtonUpdate        = Knoten aktualisieren
 
 # The longest of the next three lines determines the window width.
 NotesStd1   = Zur Erzeugung eines Knotens Parameter eingeben und 'Erg\u00e4nze neuen Knoten' klicken.
@@ -34,9 +27,6 @@ NotesEdit2  = Um diesen Knoten zu \u00e4ndern, Parameter \u00e4ndern und 'Knoten
 NotesEdit3  = Um ohne Speichern Bearbeitung zu verlassen 'Abbrechen' klicken.
 
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
-Error1    = Fehler - Knoten auf Adresse '
-Error2    = ' existiert bereits, bitte \u00e4ndern.
-Error3    = Fehler beim Erzeugen des Knotens. Knoten nicht erzeugt.
 Error4    = Fehler - Kein Knoten mit eingegebener Adresse (UA), bitte \u00e4ndern.
 Error5    = Fehler - Eingabefehler in Knotenadresse (UA), bitte \u00e4ndern.
 Error6    = Fehler - Knotenadresse muss zwischen 0 and 255 liegen.
@@ -51,6 +41,3 @@ ConfirmDeleteTitle = L\u00f6schen best\u00e4tigen
 ConfirmUpdate2  = Detektoren, Weichen oder Signale mit dieser Kontenadresse k\u00f6nnen betroffen sein.
 ConfirmUpdate3  = Knoten wirklich aktualisieren?
 ConfirmUpdateTitle  = Aktualisierung best\u00e4tigen
-
-Reminder1  = Speichern der neuen Knoteninformation nicht vergessen.
-Reminder2  = Speicherknopf im Fenster Voreinstellungen benutzen.
