group nodeconfig keys, except special usage

--- a/java/src/jmri/jmrix/JmrixBundle_nl.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_nl.properties
@@ -235,6 +235,10 @@ OutputBits              = output bits
 
 LabelNodeAddress        = Node-adres:
 TooltipNodeAddress      = Voer adres van Node in (decimaal, geheel getal)
+LabelCardSize           = Kaartgrootte:
+LabelNodeType           = Node-type:
+BoxLabelNotes           = Opmerkingen
+
 ButtonAdd               = Voeg Node toe
 ButtonEdit              = Bewerk Node
 ButtonDelete            = Verwijder Node
@@ -247,14 +251,15 @@ ConfirmDeleteTitle      = Bevestig verwijderen
 ConfirmDelete1          = Deze Node (module) wissen?
 ConfirmDelete2          = Alle Terugmelders, Wissels en Lampen met dit Node-adres worden verwijderd.
 ConfirmUpdateTitle      = Bevestig bijwerken
+ConfirmUpdate1          = Deze bewerking zal het aantal kaarten op deze Node reduceren.
 ConfirmUpdate2          = Terugmelders, Wissels en Lampen met dit Node-adres kunnen worden be\u00efnvloed.
 ConfirmUpdate3          = Deze Node bijwerken?
 
 # Node edit feedback
 # The longest of the next three lines determines the window width.
-NotesStd1               = Voer kenmerken in en klik op [Voeg Node toe].
-NotesStd2               = Pas kenmerken aan en klik op [Werk Node bij.
-NotesStd3               = Stel Node-adres in en klik op [Wis Node] om een Node te verwijderen uit de configuratie.
+NotesStd1               = Voer kenmerken in en klik op [Voeg Node toe] om een nieuwe Node toe te voegen.
+NotesStd2               = Pas kenmerken aan en klik op [Werk Node bij] om een node te bewerken.
+NotesStd3               = Stel Node-adres in en klik op [Verwijder Node] om een Node te verwijderen uit de configuratie.
 # These three lines must be shorter than the longest line above.
 NotesEdit1              = Controleer het Node-adres voordat je wijzigingen aanbrengt.
 NotesEdit2              = Vul kenmerken in en klik op [Werk Node bij] om deze Node aan te passen.
@@ -262,6 +267,19 @@ NotesEdit3              = Klik op [Annuleer] om dit scherm te sluiten zonder wij
 # All Errorxx lines below must be shorter than the longest NotesStdx line above. Can override in package nodeconfig Bundle
 Error1                  = Fout - Er bestaat al een Node met adres {0}. Kies een ander adres.
 Error3                  = Fout bij het aanmaken van nieuwe Node. Node niet toegevoegd.
+Error4                  = Fout - Geen Node gevonden met het ingevulde adres. Kies een ander adres.
+
+TipNodeAddress          = Voer node-adres in (geheel getal).
+TipNodeType             = Selecteer type van de node.
+TipDelay                = Vertraging tussen ontvangst-bytes (eenheid: 10 msec), normaal = 0.
+TipPulseWidth           = Pulsduur voor impulswisselsturing (waarde van 100 tot 10000).
+TipCardSize             = Selecteer aantal bits per kaart.
+TipAddButton            = Voeg nieuwe Node toe
+TipEditButton           = Bewerk bestaande Node
+TipDeleteButton         = Wis Node
+TipDoneButton           = Klik nadat alle node-configuratie ingevuld is
+TipUpdateButton         = Werk node-informatie bij
+TipCancelButton         = Breek bewerken af zonder wijzigingen aan de node
 
 # Lenz XpressNet/Roco Z21 shared config items
 GetSystemInfoButtonLabel = Vraag Systeem-info op
