--- a/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle_ja_JP.properties
+++ b/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle_ja_JP.properties
@@ -5,26 +5,8 @@
 
 WindowTitle    = \u30ce\u30fc\u30c9\u8a2d\u5b9a
 
-BoxLabelNotes  = \u30ce\u30fc\u30c8
-
-LabelCardSize       = \u30ab\u30fc\u30c9\u30b5\u30a4\u30ba:
-LabelNodeType       = \u30ce\u30fc\u30c9\u30bf\u30a4\u30d7:
-
 TipNodeAddress      = Enter node address, numbering from 1 to 255 (included).
-TipNodeType         = \u30ce\u30fc\u30c9\u306e\u7a2e\u985e\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002
-TipAddButton        = \u65b0\u898f\u30ce\u30fc\u30c9\u8ffd\u52a0
-TipEditButton       = \u65e2\u5b58\u30ce\u30fc\u30c9\u7de8\u96c6
-TipDeleteButton     = \u65e2\u5b58\u30ce\u30fc\u30c9\u524a\u9664
-TipInitButton       = Send initialization messages to node
-TipDoneButton       = Select when done configuring nodes
-TipUpdateButton     = Change node information
-TipCancelButton     = Stop edit without changing node
 
 # The longest of the next three lines determines the window width.
-#NotesStd3   = To Delete a node, enter node address, then select 'Delete Node'.
-# All Errorxx lines below must be shorter than the longest NotesStdx line above.
+# All Errorxx lines below must be shorter than the longest NotesStdx line in jmrix.Bundle.
 Error4          = Error - No node with entered Node Address(UA), please try again.
-
-FeedBackAdd     = Node added. Node Address =
-FeedBackDelete  = Node deleted. Node Address =
-FeedBackUpdate  = Node updated. Node Address =
