--- a/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_it.properties
+++ b/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_it.properties
@@ -19,6 +19,7 @@ LabelMilliseconds = (millisecondi)
 LabelNumOutputBits = Numero di Bits in Uscita :
 LabelNumInputBits = Numero di Bits in Ingresso:
 
+# special Maple terminology, does not use strings in jmrix.Bundle
 TipNodeAddress = Batti Indirizzo Stazione, (1-99), come configurato nel pannello HMI.
 TipPollTimeout = Batti il tempo di attesa della risposta per segnalare "Pannello Sconnesso".
 TipSendDelay = Batti il tempo di attesa della risposta ai comandi broadcast.
@@ -35,9 +36,7 @@ TipCancelButton = Termina senza cambiare le informazioni del Pannello di Nodo
 ButtonAdd = Aggiungi Pannello
 ButtonEdit = Modifica Panello
 ButtonDelete = Cancella Pannello
-ButtonDone = Fatto
 ButtonUpdate = Aggiorna Pannello
-ButtonCancel = Annulla
 
 # The longest of the next three lines determines the window width.
 NotesStd1 = Per Aggiungere un nuovo Pannello di nodo, batti le informazioni e seleziona 'Aggiungi Pannello'.
@@ -49,8 +48,6 @@ NotesEdit2 = Per modificare questo Pannello, fai le modifiche, e seleziona 'Aggi
 NotesEdit3 = Per abbandonare le modiche senza salvare questo Pannello, seleziona 'Annulla'.
 
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
-Error1 = Errore - Il Nodo con l'indirizzo di stazione '
-Error2 = ' introdotto, esiste gi\u2021.
 Error3 = Errore nella creazione del nuovo Pannello. Pannello non aggiunto.
 Error4 = Errore - Nessun nodo con questo indirizzo di Stazione, prova di nuovo.
 Error5 = Errore - Carattere errato nell'indirizzo di Stazione (UA), prova di nuovo.
@@ -81,4 +78,3 @@ ConfirmUpdate3 = Sei sicuro di voler aggiornare la configurazione di questo Pann
 ConfirmUpdateTitle = Conferma Aggiornamento
 
 ReminderNode1 = Ricorda di salvare la tua nuova configurazione Maple su disco.
-Reminder2 = Usa il bottone Salva nella finestra Preferenze.
