--- a/java/src/jmri/jmrix/JmrixBundle_da.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_da.properties
@@ -1,7 +1,7 @@
 # JmrixBundle_da.properties
 #
-# Danish translation by Sonny Hansen
 # Danish properties for the jmri.jmrix classes
+# Translation by Sonny Hansen
 
 # menu
 MenuSystems             = Systemer
@@ -231,24 +231,43 @@ InputBitsAnd            = input bits and
 OutputBits              = output bits
 
 LabelNodeAddress        = Node Address:
+TooltipNodeAddress      = Enter Node address (decimal integer)
+BoxLabelNotes           = Notes
+LabelCardSize           = Card Size:
+LabelNodeType           = Node Type:
+
 ButtonAdd               = Add Node
 ButtonEdit              = Edit Node
 ButtonDelete            = Delete Node
 ButtonInit              = Init Node
 ButtonUpdate            = Update Node
 ReminderNode1           = Remember to save your new Node Configuration information to disk.
-Reminder2=Use the [Save] button in the Preferences window.
+Reminder2               = Use the [Save] button in the Preferences window.
 
 ConfirmDeleteTitle      = Confirm Deletion
 ConfirmDelete1          = Are you sure you want to delete this Node?
-ConfirmDelete2=Any Sensors, Turnouts, or Lights with this Node Address will be affected.
+ConfirmDelete2          = Any Sensors, Turnouts, or Lights with this Node Address will be affected.
 ConfirmUpdateTitle      = Confirm Update
 ConfirmUpdate2          = Sensor, Turnout, and Light addresses may be affected.
 ConfirmUpdate3          = Are you sure you want to update this Node?
+# tooltips
+TipNodeAddress      = Enter node address, numbering from 0 up to 255 (included).
+TipNodeType             = Select type of node.
+TipAddButton            = Add a new node
+TipEditButton           = Edit an existing node
+TipDeleteButton         = Delete an existing node
+TipInitButton           = Send initialization messages to node
+TipDoneButton           = Select when done configuring nodes
+TipUpdateButton         = Change node information
+TipCancelButton         = Stop edit without changing node
+
+FeedBackAdd             = Node added. Node Address =
+FeedBackDelete          = Node deleted. Node Address =
+FeedBackUpdate          = Node updated. Node Address =
 
 # Node edit feedback
 # The longest of the next three lines determines the window width.
-NotesStd1=To Add a new Node, enter information and select 'Add Node'.
+NotesStd1               = To Add a new Node, enter information and select 'Add Node'.
 NotesStd2               = To Edit a node, enter node address, then select 'Edit Node'.
 NotesStd3               = To Delete a node, enter node address, then select 'Delete Node'.
 # These three lines must be shorter than the longest line above.
@@ -256,8 +275,9 @@ NotesEdit1              = Please check Node Address before making changes.
 NotesEdit2              = To change this node, make changes, then select 'Update Node'.
 NotesEdit3              = To leave Edit without changing this node, select 'Cancel'.
 # All Errorxx lines below must be shorter than the longest NotesStdx line above. Can override in package nodeconfig Bundle
-Error1=Error - Node with address '{0}' already exists, please try again.
-Error3=Error when creating new Node. Node not added.
+Error1                  = Error - Node with address '{0}' already exists, please try again.
+Error3                  = Error when creating new Node. Node not added.
+Error4                  = Error - No node with entered Node Address, please try again.
 
 # Lenz XpressNet/Roco Z21 shared config items
 GetSystemInfoButtonLabel = Get System Information
