--- a/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle_de.properties
+++ b/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle_de.properties
@@ -5,26 +5,8 @@
 
 WindowTitle         = Grapevine Knotenkonfigurator
 
-BoxLabelNotes       = Bemerkungen
-
-LabelCardSize       = Kartengr\u00f6\u00dfe:
-LabelNodeType       = Knotentyp:
-
 TipNodeAddress      = Eingabe der Knotenadresse, g\u00fcltigen Wert: von 1 bis 255
-TipNodeType         = W\u00e4hle Knotentyp.
-TipAddButton        = Erg\u00e4nze neuen Knoten
-TipEditButton       = Bearbeite bestehenden Knoten
-TipDeleteButton     = L\u00f6sche bestehenden Knoten
-TipInitButton       = Sende Initialisierung an Knoten
-TipDoneButton       = W\u00e4hle wenn Knotenkonfiguration abgeschlossen
-TipUpdateButton     = \u00c4ndere Knoteninformation
-TipCancelButton     = Breche Bearbeiten ab
 
 # The longest of the next three lines determines the window width.
-#NotesStd2   = Zur Bearbeitung eines bestehenden Knotens seine Adresse eingeben und 'Knoten bearbeiten' klicken.
-# All Errorxx lines below must be shorter than the longest NotesStdx line above.
+# All Errorxx lines below must be shorter than the longest NotesStdx line in jmrix.Bundle.
 Error4    = Fehler - Kein Knoten mit eingegebener Adresse (UA), bitte \u00e4ndern.
-
-FeedBackAdd     = Knoten erg\u00e4nzt. Knotenadresse =
-FeedBackDelete  = Knoten gel\u00f6scht. Knotenadresse =
-FeedBackUpdate  = Knoten aktualisiert. Knotenadresse =
