--- a/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle_it.properties
+++ b/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle_it.properties
@@ -5,26 +5,8 @@
 
 WindowTitle = Configura Nodi Grapevine
 
-BoxLabelNotes = Note
-
-LabelCardSize = Dimensioni Scheda:
-LabelNodeType = Tipo Nodo:
-
 TipNodeAddress = Batti Indirizzo Nodo, partendo da 1 - 255
-TipNodeType = Seleziona tipo di nodo.
-TipAddButton = Aggiungi un nuovo nodo
-TipEditButton = Modifica un nodo esistente
-TipDeleteButton = Cancella un nodo esistente
-TipInitButton = Invia messaggio inizializazione al nodo
-TipDoneButton = Seleziona quando terminata la configurazione
-TipUpdateButton = Cambia informazioni del nodo
-TipCancelButton = Interrompi senza modificare il nodo
 
 # The longest of the next three lines determines the window width.
-#NotesStd2 = Per modificare un nodo, immettere l'indirizzo del nodo, quindi selezionare 'Modifica nodo'. // moved to jmrix.Bundle
-# All Errorxx lines below must be shorter than the longest NotesStdx line above.
+# All Errorxx lines below must be shorter than the longest NotesStdx line in jmrix.Bundle.
 Error4 = Errore - Nessun nodo con l'indirizzo battuto (UA), riprova.
-
-FeedBackAdd = Nodo Aggiunto. Indirizzo Nodo =
-FeedBackDelete = Nodo Cancellato. Indirizzo Nodo =
-FeedBackUpdate = Nodo Aggiurnato. Indirizzo Nodo =
