--- a/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_es.properties
+++ b/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_es.properties
@@ -1,7 +1,6 @@
 # NodeConfigBundle_es.properties
 #
 # Spanish properties for the jmri.jmrix.maple.nodeconfig window
-#
 # Translated by Alfredo Sola <alfredos@users.sf.net> 20040826
 
 WindowTitle         = Configuraci\u00f3n de nodos Maple
@@ -15,6 +14,7 @@ LabelDelay          = Retardo (DL):
 LabelPulseWidth     = Ancho de pulso:
 LabelMilliseconds   = (milisegundos)
 
+# special Maple terminology, does not use strings in jmrix.Bundle
 TipNodeAddress      = Introduzca direcci\u00f3n del nodo, numerando desde 0.
 TipNodeType         = Elija el tipo de nodo Maple.
 TipDelay            = Retardo entre bytes recibidos (unidades de 10 microsegundos), normalmente 0.
@@ -26,13 +26,6 @@ TipDeleteButton     = Borrar un nodo existente
 TipDoneButton       = Pulse cuando termine de configurar nodos
 TipUpdateButton     = Cambiar informaci\u00f3n de nodo
 TipCancelButton     = Parar de editar sin cambiar el nodo
-
-ButtonAdd           = A\u00f1adir nodo
-ButtonEdit          = Editar nodo
-ButtonDelete        = Borrar nodo
-ButtonDone          = Hecho
-ButtonUpdate        = Actualizar nodo
-ButtonCancel        = Cancelar
 
 # The longest of the next three lines determines the window width.
 NotesStd1   = Para a\u00f1adir un nodo, introduzca la informaci\u00f3n y pulse "A\u00f1adir nodo".
@@ -72,8 +65,6 @@ HintSearchlightPartE = no es una se\u00f1al de
 HintSearchlightPartF = dos hilos intermit.
 
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
-Error1    = Error - El nodo con direcci\u00dbn '
-Error2    = ' ya existe, intente con otra.
 Error3    = Error al crear el nodo. No se ha a\u00f1adido.
 Error4    = Error - no hay nodos con esa direcci\u00f3n (UA), intente de nuevo.
 Error5    = Error - caracter extra\u00f1o en direcci\u00f3n (UA), intente de nuevo.
@@ -87,21 +78,12 @@ Error12   = Esto es un requisito de dise\u00f1o de Maple.
 Error13   = Error - USIC_SUSIC debe tener al menos una tarjeta de E/S.
 Error14   = Por favor, configure tarjetas de entrada y salida.
 Error15   = Error - las tarjetas USIC_SUSIC deben ser de 24 o 32 bits.
-Error16   = Error - El ancho del pulso debe ser al menos 100, por favor vuelva a intentarlo.
-Error17   = Error - El ancho del pulso debe ser menos de 10000, por favor vuelva a intentarlo.
-Error18   = Error - Caracter extra\u00d2o en ancho de pulso, por favor vuelva a intentarlo.
+#Error16   = Error - El ancho del pulso debe ser al menos 100, por favor vuelva a intentarlo.
+#Error17   = Error - El ancho del pulso debe ser menos de 10000, por favor vuelva a intentarlo.
+#Error18   = Error - Caracter extra\u00d2o en ancho de pulso, por favor vuelva a intentarlo.
 
 FeedBackAdd     = A\u00d2adido nodo Maple. Direcci\u00f3n =
 FeedBackDelete  = Borrado nodo Maple. Direcci\u00f3n =
 FeedBackUpdate  = Actualizado nodo Maple. Direcci\u00f3n =
 
-ConfirmDelete1  = \u00f8Seguro que quiere borrar este nodo?
-ConfirmDelete2  = Esto afectar\u00b7 a todos los sensores, desv\u00ccos o luces con esa direcci\u00f3n.
-ConfirmDeleteTitle = Confirmar borrado
-ConfirmUpdate1  = Esto reducir\u00b7 el n\u02d9mero de tarjetas de este nodo.
-ConfirmUpdate2  = Puede afectar a direcciones de sensores, desv\u00ccos y luces.
-ConfirmUpdate3  = \u00f8Seguro que quiere actualizar este nodo?
-ConfirmUpdateTitle  = Confirmar actualizaci\u00f3n
-
 ReminderNode1  = Recuerde guardar la nueva informaci\u00f3n de nodos Maple al disco.
-Reminder2  = Utilice el bot\u00dbn de guardar de la ventana de preferencias.
