--- a/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_ja_JP.properties
+++ b/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_ja_JP.properties
@@ -1,6 +1,4 @@
-# NodeConfigBundle.properties
-#
-#
+# NodeConfigBundle_ja_JP.properties
 #
 # Japanese properties for the jmri.jmrix.maple.nodeconfig window
 # Translated by Sakae Akanuma
@@ -15,6 +13,7 @@ LabelDelay          = \u53d7\u4fe1\u9045\u5ef6 (DL) :
 LabelPulseWidth     = \u30d1\u30eb\u30b9\u5e45:
 LabelMilliseconds   = (\u30df\u30ea\u79d2)
 
+# special Maple terminology, does not use strings in jmrix.Bundle
 TipNodeAddress      = \uff10\u304b\u3089\u59cb\u307e\u308b\u30ce\u30fc\u30c9\u30a2\u30c9\u30ec\u30b9\u3092\u5165\u529b\u3057\u3066\u4e0b\u3055\u3044\u3002
 TipNodeType         = C/MRI\u30ce\u30fc\u30c9\u306e\u5f62\u5f0f\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002
 TipDelay            = \u30d0\u30a4\u30c8\u53d7\u4fe1\u6bce\u306e\u9045\u5ef6\u6642\u9593(10\u30de\u30a4\u30af\u30ed\u79d2\u5358\u4f4d), \u901a\u5e38\u306f\uff10\u3002
@@ -30,9 +29,7 @@ TipCancelButton     = \u30ce\u30fc\u30c9\u3092\u5909\u66f4\u305b\u305a\u7de8\u96
 ButtonAdd           = \u30ce\u30fc\u30c9\u8ffd\u52a0
 ButtonEdit          = \u30ce\u30fc\u30c9\u7de8\u96c6
 ButtonDelete        = \u30ce\u30fc\u30c9\u524a\u9664
-ButtonDone          = \u5b8c\u4e86
 ButtonUpdate        = \u30ce\u30fc\u30c9\u66f4\u65b0
-ButtonCancel        = \u53d6\u308a\u6d88\u3057
 
 # The longest of the next three lines determines the window width.
 NotesStd1   = To Add a new node, enter information and select 'Add Node'.
@@ -72,9 +69,6 @@ HintSearchlightPartE = 2-lead oscillating
 HintSearchlightPartF = searchlight signals.
 
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
-Error1    = Error - Node with address '
-Error2    = ' already exists, please try again.
-Error3    = Error when creating new node. Node not added.
 Error4    = Error - No node with entered Node Address(UA), please try again.
 Error5    = Error - Bad character in Node Address (UA), please try again.
 Error6    = Error - Node Address (UA) is not between 0 and 127.
@@ -87,21 +81,14 @@ Error12   = This is a C/MRI design requirement.
 Error13   = Error - USIC_SUSIC must have at least one Input or Output Card.
 Error14   = Please configure Input and Output Cards and try again.
 Error15   = Error - USIC_SUSIC cards must be either 24-bit or 32-bit.
-Error16   = Error - Pulse width must be at least 100, please try again.
-Error17   = Error - Pulse width must be less than 10000, please try again.
-Error18   = Error - Bad character in Pulse Width, please try again.
+#Error16   = Error - Pulse width must be at least 100, please try again.
+#Error17   = Error - Pulse width must be less than 10000, please try again.
+#Error18   = Error - Bad character in Pulse Width, please try again.
 
 FeedBackAdd     = C/MRI Node added. Node Address =
 FeedBackDelete  = C/MRI Node deleted. Node Address =
 FeedBackUpdate  = C/MRI Node updated. Node Address =
 
-ConfirmDelete1  = Are you sure you want to delete this node?
-ConfirmDelete2  = Any Sensors, Turnouts, or Lights with this node address will be affected.
-ConfirmDeleteTitle = Confirm Deletion
-ConfirmUpdate1  = This edit will reduce the number of cards for this node.
-ConfirmUpdate2  = Sensor, Turnout, and Light addresses may be affected.
-ConfirmUpdate3  = Are you sure you want to update this node?
-ConfirmUpdateTitle  = Confirm Update
 
-ReminderNode1  = Remember to save your new node information to disk.
-Reminder2  = Use the Save button in the Preferences window.
+ConfirmDelete1 = Are you sure you want to delete the Maple panel with Station Address
+ConfirmUpdate3 = Are you sure you want to update the configuration of this panel node?
