--- a/java/src/jmri/jmrix/oaktree/nodeconfig/NodeConfigBundle_it.properties
+++ b/java/src/jmri/jmrix/oaktree/nodeconfig/NodeConfigBundle_it.properties
@@ -3,41 +3,10 @@
 # Italian properties for the jmri.jmrix.oaktree.nodeconfig window
 # Translation: Enzo Fortuna (babbo_enzo@yahoo.com )
 
-BoxLabelNotes       = Note
-
 LabelCardSize       = Formato Scheda:
 LabelNodeType       = Tipo Nodo:
 
-TipNodeAddress      = Batti l'indirizzo del Nodo, partendo da 0 - 255
-TipNodeType         = Seleziona tipo di nodo.
-TipAddButton        = Aggiungi nuovo nodo
-TipEditButton       = Modifica un nodo esistente
-TipDeleteButton     = Cancella un Nodo esistente
-TipDoneButton       = Selezionare quando terminato la configurazione nodi
-TipUpdateButton     = Modifica Informazioni del Nodo
-TipCancelButton     = Termina Modifica senza cambiamenti al nodo
-
-# The longest of the next three lines determines the window width.
-NotesStd1   = Per Aggiungere un nuovo Nodo, batti le informazioni e seleziona 'Aggiungi Nodo'.
-NotesStd2   = Per Modificare un nodo, batti l'indirizzo del nodo, e seleziona Modifica Nodo'.
-NotesStd3   = Per Cancellare un nodo, batti l'indirizzo del nodo, e seleziona 'Cancella Nodo'.
-# These three lines must be shorter than the longest line above.
-NotesEdit1  = Controlla l'indirizzo del Nodo prima di modificare i parametri.
-NotesEdit2  = Per modificare questo nodo, effettua le modifiche, e seleziona 'Aggiorna Nodo'.
-NotesEdit3  = Per terminare le modifiche senza cambiare nulla, seleziona 'Annulla'.
-
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
 Error4    = Errore - Nessun nodo con questo indirizzo (UA), riprovare.
-Error5    = Errore - Carattere invalido nell'indirizzo Nodo (UA), riprovare.
-Error6    = Errore - L'indirizzo del Nodo non \u00e8 tra 0 e 255.
-
-FeedBackAdd     = Nodo Aggiunto. Indirizzo Nodo =
-FeedBackDelete  = Nodo Cancellato. Indirizzo Nodo =
-FeedBackUpdate  = Nodo Aggiornato. Indirizzo Nodo =
-
-ConfirmDelete1  = Sei sicuro di voler cancellare questo Nodo?
-ConfirmDelete2  = Tutti i Sensori, Scambi o Luci con questo indirizzo di Nodo saranno influenzati.
-ConfirmDeleteTitle = Conferma Cancellazione
-ConfirmUpdate2  = Indirizzi di Sensori, Scambi e Luci possono essere influenzati.
-ConfirmUpdate3  = Sei sicuro di voler aggiornare questo Nodo?
-ConfirmUpdateTitle  = Conferma le Modifiche
+#Error5    = Errore - Carattere invalido nell'indirizzo Nodo (UA), riprovare.
+#Error6    = Errore - L'indirizzo del Nodo non \u00e8 tra 0 e 255.
