Improve Gv node table frame more Gc sim replies Dutch translation

--- a/java/src/jmri/jmrix/JmrixBundle_nl.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_nl.properties
@@ -258,7 +258,7 @@ ConfirmUpdate3          = Deze Node bijwerken?
 # Node edit feedback
 # The longest of the next three lines determines the window width.
 NotesStd1               = Voer kenmerken in en klik op [Voeg Node toe] om een nieuwe Node toe te voegen.
-NotesStd2               = Pas kenmerken aan en klik op [Werk Node bij] om een node te bewerken.
+NotesStd2               = Pas kenmerken aan en klik op [Bewerk Node] om een node te bewerken.
 NotesStd3               = Stel Node-adres in en klik op [Verwijder Node] om een Node te verwijderen uit de configuratie.
 # These three lines must be shorter than the longest line above.
 NotesEdit1              = Controleer het Node-adres voordat je wijzigingen aanbrengt.
