--- a/java/src/jmri/jmrix/grapevine/GrapevineBundle_nl.properties
+++ b/java/src/jmri/jmrix/grapevine/GrapevineBundle_nl.properties
@@ -12,6 +12,10 @@ ErrorInvalidMessageLength   = Entered message string has invalid length.\nEnter 
 
 ButtonSetParity             = Zet Parity om
 
+#Simulator items
+RenumberSupport             = Nodes Hernummeren wordt niet ondersteund met Simulator.\n\
+  Gebruik hiervoor het Node Configuratie-gereedschap.
+
 # GrapevineTurnout (Add to table pane) items
 AddOutputEntryToolTip       = 22103 (output, card/bank 1, connector 3)
 AddInputEntryToolTip        = 22016 (Sensor node 22, pin 16)<br>\
