--- a/java/src/jmri/jmrix/grapevine/nodetable/NodeTableBundle_it.properties
+++ b/java/src/jmri/jmrix/grapevine/nodetable/NodeTableBundle_it.properties
@@ -3,15 +3,16 @@
 # Italian properties for the jmri.jmrix.grapevine.nodetable package
 # Translation: Enzo Fortuna (babbo_enzo@yahoo.com )
 
-WindowTitle    = Nodi Grapevine
+WindowTitle     = Nodi Grapevine
 WindowTitleRenumber = Cambia Indirizzo Scheda Grapevine
 
 ButtonCheck     = Controlla
 TipCheck        = Click per aggiornare Stato Grapevine
 
 StatusOK        = OK
-StatusStart     = Inizio
-StatusRunning   = Controllo
+StatusStart     = Inizio...
+StatusRunning   = Controllo...
+StatusRunningX  = Controlle Nodo {0}/{1}
 StatusFail      = Errore nel controllo Grapevine
 
 StatusPresent   = Presente
@@ -23,7 +24,7 @@ TitleAddress    = Indirizzo
 
 ButtonInit      = Inizializza
 
-ButtonRenumber  = Cambia indirizzo Scheda Nodo
+ButtonRenumber  = Cambia indirizzo Scheda Nodo...
 
 LabelFrom       = Indirizzo Corrente: 
 LabelTo         = Nuovo Indirizzo: 
